--- a/package.json
+++ b/package.json
@@ -2,20 +2,58 @@
   "name": "@flash-sale/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "mongo:start": "docker start mongo || docker run -d -p 27017:27017 --name mongo mongo:7",
+    "mongo:stop": "docker stop mongo || exit 0",
+    "mongo:rm": "docker rm -f mongo || exit 0",
+    "mongo:logs": "docker logs -f mongo",
+    "dev:api": "nx serve @flash-sale/api",
+    "dev": "npm run mongo:start && nx serve @flash-sale/api",
+    "seed": "tsx apps/api/src/seed.ts",
+    "seed:admin": "tsx apps/api/src/seed-admin.ts"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@nx/esbuild": "^22.0.1",
+    "@nx/eslint": "22.0.1",
+    "@nx/eslint-plugin": "22.0.1",
     "@nx/js": "22.0.1",
+    "@nx/next": "^22.0.1",
+    "@nx/node": "^22.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
+    "concurrently": "^9.2.1",
+    "esbuild": "^0.19.2",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
     "nx": "22.0.1",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0"
   },
   "workspaces": [
+    "apps/*",
+    "libs/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@fastify/autoload": "~6.0.3",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.1.0",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/sensible": "~6.0.2",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
+    "better-auth": "^1.3.33",
+    "fastify": "~5.2.1",
+    "fastify-plugin": "~5.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2",
+    "zod": "^4.1.12"
+  }
 }
