feat: server side auth apis

--- a/env.sample
+++ b/env.sample
@@ -3,5 +3,5 @@ BETTER_AUTH_URL=http://localhost:3000
 MONGODB_URI=mongodb://127.0.0.1:27017
 MONGO_DB=flashsale
 
-HOST=localhost
-PORT=4000
+BEND_HOST=localhost
+BEND_PORT=4000
