feat order queue

--- a/env.sample
+++ b/env.sample
@@ -1,7 +1,10 @@
 BETTER_AUTH_SECRET=super-secret-change-in-prod
 BETTER_AUTH_URL=http://localhost:3000         
+MONGO_URL=mongodb://root:example@localhost:27017/flash_sale_db?authSource=admin
 MONGODB_URI=mongodb://127.0.0.1:27017
 MONGO_DB=flashsale
+REDIS_URL=redis://:redispass@localhost:6379
 
 BEND_HOST=localhost
 BEND_PORT=4000
+QUEUE_NAME=sale-processing-queue
