--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "mongo:start": "docker start mongo || docker run -d -p 27017:27017 --name mongo mongo:7",
-    "mongo:stop": "docker stop mongo || exit 0",
-    "mongo:rm": "docker rm -f mongo || exit 0",
-    "mongo:logs": "docker logs -f mongo",
+    "infra:up": "docker compose up -d",
+    "infra:down": "docker compose down -v",
+    "infra:logs": "docker compose logs -f",
     "dev:api": "nx serve @flash-sale/api",
-    "dev": "npm run mongo:start && nx serve @flash-sale/api",
-    "seed": "tsx apps/api/src/seed.ts"
+    "dev:worker": "nx serve @flash-sale/worker",
+    "infra:ensure": "node scripts/ensure-infra.js",
+    "dev": "npm run infra:ensure && nx serve @flash-sale/api",
+    "seed": "tsx apps/api/src/seed.ts",
+    "seed:admin": "tsx apps/api/src/seed-admin.ts"
   },
   "private": true,
   "devDependencies": {
@@ -37,7 +39,8 @@
   "workspaces": [
     "apps/*",
     "libs/*",
-    "packages/*"
+    "packages/*",
+    "worker"
   ],
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
@@ -48,8 +51,10 @@
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
     "better-auth": "^1.3.33",
+    "bullmq": "^5.62.0",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
