feat initialize front end sites

--- a/.env.docker
+++ b/.env.docker
@@ -1,44 +1,45 @@
 ####################################
 # 🔐 Better Auth Configuration
 ####################################
-BETTER_AUTH_SECRET=<your-secret-here>
-BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_SECRET=super-secret-change-in-prod
+# Point to the site-web service running inside Docker
+BETTER_AUTH_URL=http://site-web:3000
 
 
 ####################################
 # 🗄️ MongoDB Configuration
 ####################################
-MONGO_URL=mongodb://root:<password>@localhost:27017/flash_sale_db?authSource=admin
-MONGODB_URI=mongodb://127.0.0.1:27017
+MONGO_URL=mongodb://root:example@mongo:27017/flash_sale_db?authSource=admin
+MONGODB_URI=mongodb://mongo:27017
 MONGO_DB=flashsale
 
 
 ####################################
 # 🚀 Redis / Queue Configuration
 ####################################
-REDIS_URL=redis://:<password>@localhost:6379
+REDIS_URL=redis://:redispass@redis:6379
 QUEUE_NAME=sale-processing-queue
 
 
 ####################################
 # 🌐 Backend (Fastify API)
 ####################################
-BEND_HOST=localhost
+BEND_HOST=api
 BEND_PORT=4000
 
 
 ####################################
 # 🖥️ Frontend (Public Site)
 ####################################
-FEND_HOST=localhost
-FEND_PORT=4201
+FEND_HOST=site-web
+FEND_PORT=3000
 
 
 ####################################
 # 🛠️ Admin Panel (Dashboard)
 ####################################
-ADMIN_HOST=localhost
-ADMIN_PORT=4200
+ADMIN_HOST=admin-web
+ADMIN_PORT=3000
 
 
 NX_DAEMON=false
