--- a/package.json
+++ b/package.json
@@ -6,32 +6,47 @@
     "infra:up": "docker compose up -d",
     "infra:down": "docker compose down -v",
     "infra:logs": "docker compose logs -f",
+    "infra:ensure": "node scripts/ensure-infra.js",
     "dev:api": "nx serve @flash-sale/api",
     "dev:worker": "nx serve @flash-sale/worker",
-    "infra:ensure": "node scripts/ensure-infra.js",
-    "dev": "npm run infra:ensure && nx serve @flash-sale/api",
+    "dev:admin": "nx serve @flash-sale/admin-web",
+    "dev:site": "nx serve @flash-sale/site-web",
+    "dev": "cross-env NX_DAEMON=false npm run infra:ensure && concurrently \"nx serve @flash-sale/api\" \"nx serve @flash-sale/worker\" \"nx serve @flash-sale/admin-web\" \"nx serve @flash-sale/site-web\"",
     "seed": "tsx apps/api/src/seed.ts",
     "seed:admin": "tsx apps/api/src/seed-admin.ts"
   },
   "private": true,
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
-    "@nx/esbuild": "^22.0.1",
-    "@nx/eslint": "22.0.1",
-    "@nx/eslint-plugin": "22.0.1",
-    "@nx/js": "22.0.1",
-    "@nx/next": "^22.0.1",
-    "@nx/node": "^22.0.1",
+    "@next/eslint-plugin-next": "^15.2.4",
+    "@nx/esbuild": "22.0.2",
+    "@nx/eslint": "22.0.2",
+    "@nx/eslint-plugin": "22.0.2",
+    "@nx/js": "22.0.2",
+    "@nx/next": "22.0.2",
+    "@nx/node": "22.0.2",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "20.19.9",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
+    "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
-    "nx": "22.0.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "nx": "22.0.2",
     "prettier": "^2.6.2",
+    "sass": "1.62.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0"
@@ -58,6 +73,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
+    "next": "~15.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "zod": "^4.1.12"
   }
 }
