--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,58 @@ services:
     volumes:
       - mongo_data:/data/db
 
+  # --- Backend API ---
+  api:
+    build:
+      context: .
+      dockerfile: apps/api/Dockerfile
+    container_name: flash-sale-api
+    ports:
+      - "4300:4300"
+    env_file:
+      - .env
+    depends_on:
+      - mongo
+      - redis
+
+  # --- Worker ---
+  worker:
+    build:
+      context: .
+      dockerfile: apps/worker/Dockerfile
+    container_name: flash-sale-worker
+    env_file:
+      - .env
+    depends_on:
+      - mongo
+      - redis
+
+  # --- Admin Frontend (Next.js) ---
+  admin-web:
+    build:
+      context: .
+      dockerfile: apps/admin-web/Dockerfile
+    container_name: flash-sale-admin-web
+    ports:
+      - "4200:3000"
+    env_file:
+      - .env
+    depends_on:
+      - api
+
+  # --- Public Site (Next.js) ---
+  site-web:
+    build:
+      context: .
+      dockerfile: apps/site-web/Dockerfile
+    container_name: flash-sale-site-web
+    ports:
+      - "4201:3000"
+    env_file:
+      - .env
+    depends_on:
+      - api
+
 volumes:
   redis_data:
   mongo_data:
-
