--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "worker"
   ],
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@fastify/autoload": "~6.0.3",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
@@ -65,8 +66,10 @@
     "@fastify/sensible": "~6.0.2",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
+    "antd": "^5.27.6",
     "better-auth": "^1.3.33",
     "bullmq": "^5.62.0",
+    "dayjs": "^1.11.18",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
     "ioredis": "^5.8.2",
@@ -76,6 +79,7 @@
     "next": "~15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "zod": "^4.1.12"
   }
 }
