--- a/.env.docker
+++ b/.env.docker
@@ -4,7 +4,7 @@
 BETTER_AUTH_SECRET=super-secret-change-in-prod
 # Point to the site-web service running inside Docker
 BETTER_AUTH_URL=http://site-web:3000
-
+CLIENT_ORIGINS=http://localhost:4000,http://localhost:4200,http://localhost:4201
 
 ####################################
 # 🗄️ MongoDB Configuration
@@ -41,5 +41,6 @@ FEND_PORT=3000
 ADMIN_HOST=admin-web
 ADMIN_PORT=3000
 
+NEXT_PUBLIC_API_URL=http://localhost:4000
 
 NX_DAEMON=false
