--- a/env.sample
+++ b/env.sample
@@ -3,7 +3,7 @@
 ####################################
 BETTER_AUTH_SECRET=<your-secret-here>
 BETTER_AUTH_URL=http://localhost:3000
-
+CLIENT_ORIGINS=http://localhost:4000,http://localhost:4200,http://localhost:4201
 
 ####################################
 # 🗄️ MongoDB Configuration
@@ -39,6 +39,8 @@ FEND_PORT=4201
 ####################################
 ADMIN_HOST=localhost
 ADMIN_PORT=4200
+
+NEXT_PUBLIC_API_URL=http://localhost:4000
 
 
 NX_DAEMON=false
