--- a/.env.docker
+++ b/.env.docker
@@ -9,8 +9,8 @@ CLIENT_ORIGINS=http://localhost:4000,http://localhost:4200,http://localhost:4201
 ####################################
 # 🗄️ MongoDB Configuration
 ####################################
-MONGO_URL=mongodb://root:example@mongo:27017/flash_sale_db?authSource=admin
-MONGODB_URI=mongodb://mongo:27017
+MONGODB_URI=mongodb://root:example@mongo:27017/flash_sale_db?authSource=admin
+MONGODB_URL=mongodb://mongo:27017
 MONGO_DB=flashsale
 
 
