--- a/env.sample
+++ b/env.sample
@@ -8,8 +8,8 @@ CLIENT_ORIGINS=http://localhost:4000,http://localhost:4200,http://localhost:4201
 ####################################
 # 🗄️ MongoDB Configuration
 ####################################
-MONGO_URL=mongodb://root:<password>@localhost:27017/flash_sale_db?authSource=admin
-MONGODB_URI=mongodb://127.0.0.1:27017
+MONGODB_URI=mongodb://root:<password>@localhost:27017/flash_sale_db?authSource=admin
+MONGODB_URL=mongodb://127.0.0.1:27017
 MONGO_DB=flashsale
 
 
