--- a/apps/site-web/package.json
+++ b/apps/site-web/package.json
@@ -42,6 +42,10 @@
   "dependencies": {
     "next": "~15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "antd": "^5.27.6",
+    "@ant-design/nextjs-registry": "^1.2.0",
+    "@ant-design/icons": "^5.5.1",
+    "react-toastify": "^11.0.5"
   }
 }
