fix public sale api

--- a/apps/site-web/tsconfig.json
+++ b/apps/site-web/tsconfig.json
@@ -30,12 +30,13 @@
     }
   },
   "include": [
+    "../../dist/apps/site-web/.next/types/**/*.ts",
     "next-env.d.ts",
     "src/**/*.js",
     "src/**/*.jsx",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "../../dist/apps/site-web/.next/types/**/*.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     ".next",
