--- a/apps/site-web/tsconfig.json
+++ b/apps/site-web/tsconfig.json
@@ -26,7 +26,11 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@/types": ["./src/types"],
+      "@/services": ["./src/services"],
+      "@/utils": ["./src/utils"],
+      "@/components": ["./src/components"]
     }
   },
   "include": [
