fix caching and organize env

--- a/.env.docker
+++ b/.env.docker
@@ -11,7 +11,7 @@ CLIENT_ORIGINS=http://localhost:4000,http://localhost:4200,http://localhost:4201
 ####################################
 MONGODB_URI=mongodb://root:example@mongo:27017/flash_sale_db?authSource=admin
 MONGODB_URL=mongodb://mongo:27017
-MONGO_DB=flashsale
+MONGO_DB=flash_sale_db
 
 
 ####################################
