--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -9,6 +9,9 @@
   "include": ["src/**/*.ts"],
   "references": [
     {
+      "path": "../../libs/shared-utils"
+    },
+    {
       "path": "../../libs/shared-types"
     }
   ]
