--- a/env.sample
+++ b/env.sample
@@ -10,7 +10,7 @@ CLIENT_ORIGINS=http://localhost:4000,http://localhost:4200,http://localhost:4201
 ####################################
 MONGODB_URI=mongodb://root:<password>@localhost:27017/flash_sale_db?authSource=admin
 MONGODB_URL=mongodb://127.0.0.1:27017
-MONGO_DB=flashsale
+MONGO_DB=flash_sale_db
 
 
 ####################################
