--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "dev:admin": "nx serve @flash-sale/admin-web",
     "dev:site": "nx serve @flash-sale/site-web",
     "dev": "cross-env NX_DAEMON=false npm run infra:ensure && concurrently \"nx serve @flash-sale/api\" \"nx serve @flash-sale/worker\" \"nx serve @flash-sale/admin-web\" \"nx serve @flash-sale/site-web\"",
-    "seed": "tsx apps/api/src/seed.ts",
-    "seed:admin": "tsx apps/api/src/seed-admin.ts",
     "auth:reset": "node scripts/reset-better-auth.js",
     "redis:reset": "node scripts/reset-redis.js",
     "redis:reset-all": "node scripts/reset-redis-full.js",
     "redis:show": "node scripts/redis-display.js",
     "redis:monitor": "node scripts/redis-monitor.js monitor",
     "redis:watch": "node scripts/redis-monitor.js watch",
-    "db:investigate": "node scripts/check-deletion-sources.js"
+    "test": "npm run test:api && npm run test:worker && npm run test:admin && npm run test:site",
+    "test:api": "vitest --config apps/api/vitest.config.ts",
+    "test:worker": "vitest --config apps/worker/vitest.config.ts",
+    "test:admin": "vitest --config apps/admin-web/vitest.config.ts",
+    "test:site": "vitest --config apps/site-web/vitest.config.ts"
   },
   "private": true,
   "devDependencies": {
@@ -36,13 +38,20 @@
     "@nx/js": "22.0.2",
     "@nx/next": "22.0.2",
     "@nx/node": "22.0.2",
+    "@nx/vite": "^22.0.2",
+    "@nx/web": "22.0.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/ui": "^3.0.0",
+    "ajv": "^8.0.0",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "esbuild": "^0.19.2",
@@ -53,12 +62,18 @@
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "jiti": "2.4.2",
+    "jsdom": "^27.1.0",
     "nx": "22.0.2",
     "prettier": "^2.6.2",
-    "sass": "1.62.1",
+    "sass": "^1.93.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   },
   "workspaces": [
     "apps/*",
