--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
     "test:api": "vitest --config apps/api/vitest.config.ts",
     "test:worker": "vitest --config apps/worker/vitest.config.ts",
     "test:admin": "vitest --config apps/admin-web/vitest.config.ts",
-    "test:site": "vitest --config apps/site-web/vitest.config.ts"
+    "test:site": "vitest --config apps/site-web/vitest.config.ts",
+    "k6:api:smoke": "nx k6-test @flash-sale/api",
+    "k6:api:stress": "nx k6-stress @flash-sale/api",
+    "k6:api:soak": "nx k6-soak @flash-sale/api",
+    "k6:worker:smoke": "nx k6-test @flash-sale/worker",
+    "k6:worker:stress": "nx k6-stress @flash-sale/worker",
+    "k6:worker:soak": "nx k6-soak @flash-sale/worker",
+    "k6:api": "nx run @flash-sale/api:k6-test --",
+    "k6:worker": "nx run @flash-sale/worker:k6-test --"
   },
   "private": true,
   "devDependencies": {
@@ -79,7 +87,8 @@
     "apps/*",
     "libs/*",
     "packages/*",
-    "worker"
+    "worker",
+    "tools"
   ],
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.2.0",
