--- a/env.sample
+++ b/env.sample
@@ -26,6 +26,10 @@ QUEUE_NAME=sale-processing-queue
 BEND_HOST=localhost
 BEND_PORT=4000
 
+CRITICAL_LOCK_TTL_MS=200
+WORKER_CONCURRENCY=10
+HOLD_TTL_SECONDS=900
+FAST_PASS_PERCENT=1
 
 ####################################
 # 🖥️ Frontend (Public Site)
@@ -41,6 +45,20 @@ ADMIN_HOST=localhost
 ADMIN_PORT=4200
 
 NEXT_PUBLIC_API_URL=http://localhost:4000
-HOLD_TTL_SECONDS=900
 
 NX_DAEMON=false
+
+####################################
+# 📈 K6 Load Test Configuration
+####################################
+# Base URL the k6 scripts will hit. When running inside Docker Compose network,
+# use API_BASE=http://host.docker.internal:4000 if api is not running in docker
+API_BASE=http://api:4000
+
+# Flash sale scenario defaults used by tools/k6/flash-sale-stress.js
+# Duration of the flash sale window (seconds)
+FLASH_SALE_DURATION=600
+# Initial inventory for the created flash sale
+STARTING_QUANTITY=1000
+# Initial polling interval (seconds) for queue position checks
+POLLING_INTERVAL=5
