--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,8 @@
     "customConditions": ["@flash-sale/source"],
     "baseUrl": ".",
     "paths": {
+      "@flash-sale/shared-types": ["libs/shared-types/src/index.ts"],
+      "@flash-sale/shared-utils": ["libs/shared-utils/src/index.ts"],
       "@shared/types": ["libs/shared-types/src/index.ts"],
       "@shared/utils": ["libs/shared-utils/src/index.ts"],
       "@shared/config": ["libs/shared-config/src/index.ts"],
