--- a/package.json
+++ b/package.json
@@ -24,7 +24,16 @@
     "test:api": "vitest --config apps/api/vitest.config.ts",
     "test:worker": "vitest --config apps/worker/vitest.config.ts",
     "test:admin": "vitest --config apps/admin-web/vitest.config.ts",
-    "test:site": "vitest --config apps/site-web/vitest.config.ts"
+    "test:site": "vitest --config apps/site-web/vitest.config.ts",
+    "k6:api:smoke": "nx k6-test @flash-sale/api",
+    "k6:api:stress": "nx k6-stress @flash-sale/api",
+    "k6:api:soak": "nx k6-soak @flash-sale/api",
+    "k6:flash": "nx k6-flash-sale @flash-sale/api",
+    "k6:worker:smoke": "nx k6-test @flash-sale/worker",
+    "k6:worker:stress": "nx k6-stress @flash-sale/worker",
+    "k6:worker:soak": "nx k6-soak @flash-sale/worker",
+    "k6:api": "nx run @flash-sale/api:k6-test --",
+    "k6:worker": "nx run @flash-sale/worker:k6-test --"
   },
   "private": true,
   "devDependencies": {
@@ -79,11 +88,14 @@
     "apps/*",
     "libs/*",
     "packages/*",
-    "worker"
+    "worker",
+    "tools"
   ],
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.2.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@bull-board/api": "^6.14.0",
+    "@bull-board/fastify": "^6.14.0",
     "@fastify/autoload": "~6.0.3",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
@@ -93,15 +105,17 @@
     "@fastify/swagger-ui": "^5.2.3",
     "antd": "^5.27.6",
     "better-auth": "^1.3.33",
-    "bullmq": "^5.62.0",
+    "bullmq": "^5.63.0",
     "dayjs": "^1.11.18",
     "fastify": "~5.2.1",
+    "fastify-metrics": "^12.1.0",
     "fastify-plugin": "~5.0.1",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "next": "~15.2.4",
+    "prom-client": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
