--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -98,6 +98,32 @@
           }
         }
       }
+      ,
+      "k6-test": {
+        "executor": "@flash-sale/tools:k6-run",
+        "options": {
+          "script": "tools/k6/api-smoke.js",
+          "options": "--vus 10 --duration 30s"
+        }
+      },
+      "k6-stress": {
+        "executor": "@flash-sale/tools:k6-run",
+        "options": {
+          "script": "tools/k6/api-stress.js"
+        }
+      },
+      "k6-soak": {
+        "executor": "@flash-sale/tools:k6-run",
+        "options": {
+          "script": "tools/k6/api-soak.js"
+        }
+      },
+      "k6-flash-sale": {
+        "executor": "@flash-sale/tools:k6-run",
+        "options": {
+          "script": "tools/k6/flash-sale-stress.js"
+        }
+      }
     }
   },
   "dependencies": {
